--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.hello_android_world_leisenring">
-
+<!-- Here is a comment made in the Manifest file from GitHub -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
